# mini-sglang

./: .gitignore  AGENT.md  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  SGL_KERNEL_INTEGRATION.md  bench_suite.py  benchmark.py  cli_demo.py  config.py  local_bench.py  multi_device.py  one_click_bench.py  one_click_compare.py  optimizations.py  pyproject.toml  requirements.txt  run_zimage_gguf.sh  server_bench.py  server_benchmark.py  smoke_test.py  text_dataset.json  text_dataset.jsonl  z_image_mps.py
.githooks/: pre-commit
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
api/: __init__.py  server.py
backend/: __init__.py  attention_patch.py  backend_factory.py  cache.py  factory.py  hf_runner.py  mlx_backend.py  model_backend.py  sgl_kernel_backend.py  sglang_attention.py  sglang_layers.py  sglang_qwen.py
backend/diffusion/: __init__.py  diffusers_image.py  diffusers_video.py  z_image.py
backend/hf/: __init__.py  backend.py  baseline.py  vlm.py
backend/mlx/: __init__.py  backend.py  vlm.py
backend/sglang/: __init__.py  backend.py  sgl_kernel_backend.py  sglang_attention.py  sglang_layers.py  sglang_qwen.py
docs/: ARCHITECTURE.md  BENCHMARKS.md  CONFIGURATION.md  DEVELOPMENT.md
engine/: __init__.py  engine.py
ipc/: __init__.py  zmq_control.py
scripts/: install_sgl_kernel.sh
sglang_mini/: benchmark.py  cli_demo.py  one_click_compare.py  smoke_test.py
sglang_mini/sglang_mini/: config.py
sglang_mini/sglang_mini/api/: server.py
sglang_mini/sglang_mini/engine/: engine.py
utils/: __init__.py  image_loader.py  runtime.py  timer.py
