[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mini-sglang"
version = "0.1.0"
description = "Minimal streaming-first sglang-inspired stack"
readme = "README.md"
authors = [{ name = "mini-sglang" }]
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "uvicorn",
    "transformers",
    "torch",
    "sentencepiece",
    "httpx",
    "sglang==0.5.2",
    "modelscope",
    "pybase64",
]

[tool.setuptools]
packages = ["api", "backend", "engine"]
py-modules = ["config", "local_bench", "server_bench", "cli_demo", "smoke_test", "optimizations", "multi_device"]
