[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mini-sglang"
version = "0.1.0"
description = "Minimal streaming-first sglang-inspired stack"
readme = "README.md"
authors = [{ name = "mini-sglang" }]
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "uvicorn",
    "transformers",
    "torch",
    "flash-attn; platform_system == \"Linux\"",
    "sentencepiece",
    "httpx",
    "sglang==0.5.2",
    "modelscope",
    "pybase64",
    "pyzmq",
    "mlx>=0.30.0",
    "mlx-lm>=0.28.4",
]

[tool.setuptools]
packages = ["api", "backend", "engine", "ipc", "utils"]
py-modules = ["config", "bench_suite", "cli_demo", "smoke_test", "multi_device"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
install_types = true
non_interactive = true
check_untyped_defs = true
